[gd_scene load_steps=9 format=3 uid="uid://biejgv3b13bod"]

[ext_resource type="Script" path="res://assets/scripts/ui/title_screen.gd" id="1_cifwc"]
[ext_resource type="Texture2D" uid="uid://ce0vp1nhd3k63" path="res://assets/art/ui/title_screen/title_screen_bg.png" id="1_plxv3"]
[ext_resource type="Texture2D" uid="uid://buvdds1nsshou" path="res://assets/art/ui/title_screen/title_screen_render.png" id="2_loxwo"]
[ext_resource type="Script" path="res://assets/scenes/title_screen_render.gd" id="3_yikcu"]
[ext_resource type="Texture2D" uid="uid://6k3lrwynomrk" path="res://assets/art/ui/title_screen/title_screen_continue.png" id="4_r8qkh"]
[ext_resource type="Script" path="res://assets/scenes/ui_blink.gd" id="5_rkwvt"]
[ext_resource type="AudioStream" uid="uid://qaf1pwf03uc" path="res://assets/audio/music/pitch_perfect_title-001.ogg" id="7_iry78"]
[ext_resource type="PackedScene" uid="uid://b8w6yc4jlcj3v" path="res://assets/scenes/main.tscn" id="8_t4f3y"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cifwc")

[node name="TitleScreenBg" type="Sprite2D" parent="."]
position = Vector2(360, 270)
texture = ExtResource("1_plxv3")

[node name="TitleScreenRender" type="Sprite2D" parent="."]
position = Vector2(360, 270)
texture = ExtResource("2_loxwo")
script = ExtResource("3_yikcu")

[node name="TitleScreenContinue" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 720.0
offset_bottom = 540.0
texture = ExtResource("4_r8qkh")
script = ExtResource("5_rkwvt")
blink_duration = 0.5

[node name="TitleScreenMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_iry78")
autoplay = true

[node name="Game" parent="." instance=ExtResource("8_t4f3y")]
